--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="gold-nouveau">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+		<footer>Footer Navigation</footer>
 	</body>
 </html>
