--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<script src="https://kit.fontawesome.com/c0a01584c9.js" crossorigin="anonymous"></script>
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="modern">
+	<body data-sveltekit-preload-data="hover" data-theme="sahara">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 		<!-- <footer>Footer Navigation</footer> -->
 	</body>
