--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,6 @@
 		%sveltekit.head%
 		<script src="https://kit.fontawesome.com/c0a01584c9.js" crossorigin="anonymous"></script>
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="sahara">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
-		<!-- <footer>Footer Navigation</footer> -->
-	</body>
+	<body data-sveltekit-preload-data="hover" data-theme="vintage">
+		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>	</body>
 </html>
